--- a/src/components/Clima/clima.css
+++ b/src/components/Clima/clima.css
@@ -24,4 +24,16 @@ h2, h3, h4, h5{
     font-weight: 100;
     font-size: 20px;
     color: silver;
+    text-decoration: none;    
+}
+
+.temperatura-u-medida:hover{
+    color: orange;
+    text-decoration: none;
+}
+
+.clima-block-right{
+    width: 50%;
+    margin-top: auto;
+    text-align: right;
 }
