--- a/src/components/Clima/clima.css
+++ b/src/components/Clima/clima.css
@@ -1,7 +1,7 @@
 .clima-container{
     width: 50%;
     padding: 15px;
-    border: 0.5px solid silver;
+    border: 1px solid silver;
     border-radius: 15px;
     display: flex;
     margin: auto;
@@ -36,4 +36,18 @@ h2, h3, h4, h5{
     width: 50%;
     margin-top: auto;
     text-align: right;
+}
+
+.btn-actualizar{
+    color: white;
+    background: rgb(146, 146, 146); 
+    padding: 5px;
+    border: 1px solid rgb(146, 146, 146);
+    border-radius: 5px;
+}
+
+.btn-actualizar:hover{
+    color: rgb(146, 146, 146);
+    background: white; 
+    border: 1px solid rgb(146, 146, 146);
 }
